Fix c-select chevron visibility issue

--- a/src/components/c-select/c-select.scss
+++ b/src/components/c-select/c-select.scss
@@ -110,14 +110,17 @@
 .c-select-row {
   display: flex;
   flex: 1 1 auto;
-  margin-right: -12px;
-  margin-left: -4px;
+  align-items: center;
+}
+
+.c-select-icon-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 0 12px 0 4px;
 }
 
 .c-select-icon {
   line-height: 20px;
-  padding: 8px 24px;
-  margin-top: 3px;
   transition: all 0.25s;
 }
 
